[gd_scene load_steps=5 format=3 uid="uid://djoicd3vhbr1y"]

[ext_resource type="Script" path="res://core/ui/components/plugin_store_item.gd" id="1_mwjyr"]
[ext_resource type="PackedScene" uid="uid://df5o1o2dsik84" path="res://core/ui/components/button.tscn" id="2_nlpc7"]

[sub_resource type="LabelSettings" id="LabelSettings_8mk03"]
font_size = 24
shadow_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_1n30o"]
font_size = 12

[node name="PluginStoreItem" type="Control"]
custom_minimum_size = Vector2(415, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mwjyr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PluginNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Store Item"
label_settings = SubResource("LabelSettings_8mk03")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AuthorLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Author: Unknown"

[node name="SummaryLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "This is some short description of this plugin that isn't too long"
label_settings = SubResource("LabelSettings_1n30o")
autowrap_mode = 3
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="InstallButton" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_nlpc7")]
layout_mode = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 2.0
text = "Install"

[node name="UpdateButton" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_nlpc7")]
layout_mode = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 2.0
text = "Update"

[node name="DetailsButton" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_nlpc7")]
layout_mode = 2
size_flags_vertical = 8
text = "Details"
